# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.


*portage-2.0.51_pre6 (25 Apr 2003): Big cleanups & Ebuild QA Stuff.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Dropped selinux
  from the IUSE complainer list.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> repoman: Made it use the
  constants defined in portage.py for the world file.
  
  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Modifications
  so that the virtuals are incremented in the proper order and reversed the
  final values so that the first virtual is the 'best' one. Try to put the
  INHERITED variable back into the environment before calling out to portage.
  This makes the ECLASS QA notices actually valid.

*portage-2.0.51_pre5 (25 Apr 2003): Big cleanups & Ebuild QA Stuff.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed name
  of the world file constant. Fixed the virtuals loading and vartree creation
  circular dep with a repitition hack. Fixed the virtuals loading function so
  that it doesn't destroy the virtuals before saving them.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fixed all the
  references to the world file to use portage constants. Made the verbose
  output for use flags call unique array to make sure values aren't duped.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Typo fix for
  inherited, and removed the delay.

*portage-2.0.51_pre4 (25 Apr 2003): Big cleanups & Ebuild QA Stuff.

  25 Apr 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Creation of
  a great number of 'constants' that were hard coded in various places and